Added email. Contact form. And modified a lot of templates

--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -68,7 +68,7 @@
    <section class="quote">
     <div class="container">
      <div class="row">
-      <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
+      <div class="col-md-9"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
@@ -121,7 +121,7 @@
    <section class="quote">
     <div class="container">
      <div class="row">
-      <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
+      <div class="col-md-9"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
@@ -162,7 +162,7 @@
         </div>
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
-         <span>Per Month</span>
+         <span>Per one page</span>
          <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
         
@@ -191,7 +191,7 @@
         </div>
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
-         <span>Per Month</span>
+         <span>Per one page</span>
          <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
@@ -219,7 +219,7 @@
         </div>
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
-         <span>Per Month</span>
+         <span>Per one page</span>
          <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
@@ -247,7 +247,7 @@
         </div>
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
-         <span>Per Month</span>
+         <span>Per one page</span>
          <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
@@ -275,7 +275,7 @@
         </div>
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
-         <span>Per Month</span>
+         <span>Per one page</span>
          <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
@@ -381,7 +381,7 @@
    <section class="quote">
     <div class="container">
      <div class="row">
-      <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
+      <div class="col-md-9"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div> 
     </div>
