--- a/templates/orders/my-orders.html
+++ b/templates/orders/my-orders.html
@@ -1,5 +1,11 @@
 {% extends 'index.html' %}
+
+{% block meta_title %}My Orders{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% load render_status %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
  <a href="{% url 'home' %}">Home</a>
@@ -9,18 +15,7 @@
 {% endblock %}
 
 {% block sidebar_right %}
-<!-- BEGIN RIGHT SIDEBAR LAYOUT -->
-<div id="layout-right" class="col-md-3 col-sm-12">
- <section class="sibebar-section">
-  <ul class="list-group">
-   <li class="list-group-item active"><a href="{% url 'my-orders' %}">My Orders</a></li>
-   <li class="list-group-item"><a href="{% url 'my-account' request.user.pk %}">My account</a></li>
-   <li class="list-group-item"><a href="{% url 'password-change' %}">Password change</a></li>
-   <li class="list-group-item"><a href="{% url 'logout' %}">Exit</a></li>
-  </ul>
- </section>
-</div>
-<!-- END RIGHT SIDEBAR LAYOUT -->
+	{% include 'html/sidebar-account.html' %}
 {% endblock %}
 
 {% block content %}
