--- a/templates/pages/faq.html
+++ b/templates/pages/faq.html
@@ -52,7 +52,7 @@
 			</div>
 			<div id="question-2" class="panel-collapse collapse">
 			  <div class="panel-body">
-				While placing an order with our company you will be asked to provide such personal information as your name,  phone number and email address. Nevertheless, please note that using EssayCoffee.com is totally confidential  and we do not distribute your personal information to the third parties. It is very important for you to know that  support team may contact you using only particular phone number(s) stated on our web site, such as +1 888 243 7406. In order to secure our mutual co-operation, please do not communicate with those who introduce themselves as  EssayCoffee.com support stuff and reach you from other phone numbers! Moreover, please be aware that our  representative will never ask you to provide your credit card information via phone conversation, as it should  be entered strictly during the online payment process while filling out 2checkout billing form. EssayCoffee.com support administrator will send a confirmation letter to your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> whenever your  payment is received. For more information about our Privacy Policy please check <a href="{% url 'privacy-policy' %}" class="more" target="_blank">Privacy Policy</a> page.
+				While placing an order with our company you will be asked to provide such personal information as your name,  phone number and email address. Nevertheless, please note that using EssayCoffee.com is totally confidential  and we do not distribute your personal information to the third parties. It is very important for you to know that  support team may contact you using only particular phone number(s) stated on our web site, such as +1 888 243 7406. In order to secure our mutual co-operation, please do not communicate with those who introduce themselves as  EssayCoffee.com support stuff and reach you from other phone numbers! Moreover, please be aware that our  representative will never ask you to provide your credit card information via phone conversation, as it should  be entered strictly during the online payment process while filling out 2checkout billing form. EssayCoffee.com support administrator will send a confirmation letter to your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> whenever your  payment is received. For more information about our Privacy Policy please check <a href="{% url 'privacy-policy' %}" class="more" target="_blank">Privacy Policy</a> page.
 			  </div>
 			</div>
 		</div>
@@ -134,7 +134,7 @@
 				<p>If the native speaking writer is currently not available for completing a paper in any particular specialization, the paper can be completed by a non-native speaking writer, whose knowledge of English still corresponds to the highest TOEFL level mark.</p>
 			  </div>
 			  <h4>Can I talk to the writer who will be writing my paper?</h4>
-			  <p>You will be able to communicate with the writer by sending messages from your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a>.  You should also be getting an email notification about every new message received from the writer.  Nevertheless, it is your responsibility to check your personal page directly from time to time in case  writer has any questions regarding your order.</p>
+			  <p>You will be able to communicate with the writer by sending messages from your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a>.  You should also be getting an email notification about every new message received from the writer.  Nevertheless, it is your responsibility to check your personal page directly from time to time in case  writer has any questions regarding your order.</p>
 			</div>
 		</div>
 		
@@ -231,7 +231,7 @@
 			</div>
 			<div id="question-12" class="panel-collapse collapse">
 			  <div class="panel-body">
-				<p>After you are through with the order form you will be automatically provided with your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> at  EssayHave.com. Any of the required case studies/articles/materials can be attached directly to the "Files"  list of your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> if you have previously selected this option in the order form. As soon as the materials  are uploaded in that list they become visible for the writer. If you experience any difficulties with uploading your files,  feel free to contact our operator and ask for assistance.</p>
+				<p>After you are through with the order form you will be automatically provided with your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> at  EssayHave.com. Any of the required case studies/articles/materials can be attached directly to the "Files"  list of your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> if you have previously selected this option in the order form. As soon as the materials  are uploaded in that list they become visible for the writer. If you experience any difficulties with uploading your files,  feel free to contact our operator and ask for assistance.</p>
 			  </div>
 			</div>
 		</div>
@@ -247,7 +247,7 @@
 			</div>
 			<div id="question-13" class="panel-collapse collapse">
 			  <div class="panel-body">
-				<p>"<a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a>" is your customer's page where you can track the progress of your order, upload any of the required materials and communicate both with the writer and administrator. For your convenience each <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> contains:</p>
+				<p>"<a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a>" is your customer's page where you can track the progress of your order, upload any of the required materials and communicate both with the writer and administrator. For your convenience each <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> contains:</p>
 				<ul class="red-bullets">
 					<ol>"My Orders" tab which helps you track your orders history with EssayHave.com and displays the list of all your current and finished/canceled projects;</ol>
 					<ol>"New Order" tab where you can submit your new paper request;</ol>
@@ -285,7 +285,7 @@
 			</div>
 			<div id="question-15" class="panel-collapse collapse">
 			  <div class="panel-body">
-				<p>As soon as the writer completes your paper, you should receive a notification email with the link to your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a>. However, when the deadline approaches you should also check your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> directly in order to avoid any kind of  misunderstandings. Please note that we do not send files by email. The only way you can download and review your custom paper  is by following the link to your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> or clicking on "My orders" from our web site.</p>
+				<p>As soon as the writer completes your paper, you should receive a notification email with the link to your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a>. However, when the deadline approaches you should also check your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> directly in order to avoid any kind of  misunderstandings. Please note that we do not send files by email. The only way you can download and review your custom paper  is by following the link to your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> or clicking on "My orders" from our web site.</p>
 			  </div>
 			</div>
 		</div>
@@ -317,7 +317,7 @@
 			</div>
 			<div id="question-17" class="panel-collapse collapse">
 			  <div class="panel-body">
-				<p>In case your assignment requires some changes, you are welcome to request a <a href="{% url 'revisions-policy' %}" class="more" target="_blank">revision</a> from the "Files"  list of your <a href="{% url 'login' %}" class="more" target="_blank">Personal order page</a> by sending your comments to the writer and stating the exact number of hours they can use to complete it. If you require significant alterations to the original order, we will charge a re-writing fee that  is calculated depending on the complexity of the task. Please check our <a href="{% url 'revisions-policy' %}" class="more" target="_blank">revision policy</a> for more information.</p>
+				<p>In case your assignment requires some changes, you are welcome to request a <a href="{% url 'revisions-policy' %}" class="more" target="_blank">revision</a> from the "Files"  list of your <a href="{% url 'my-orders' %}" class="more" target="_blank">Personal order page</a> by sending your comments to the writer and stating the exact number of hours they can use to complete it. If you require significant alterations to the original order, we will charge a re-writing fee that  is calculated depending on the complexity of the task. Please check our <a href="{% url 'revisions-policy' %}" class="more" target="_blank">revision policy</a> for more information.</p>
 			  </div>
 			</div> 
 		</div>
