--- a/templates/pages/research-papers.html
+++ b/templates/pages/research-papers.html
@@ -28,7 +28,7 @@
 			<img src="{{ STATIC_URL }}images/demo/banner-large.jpg" alt="">
 			<div class="banner-title">Buy Research Paper</div>
 			<a href="{% url 'new-order' %}" class="btn btn-primary">Order Now</a>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.99</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.<span>99</span></span></span>/page</div>
 		</div>
 		
 		<p>Do not hesitate any more jeopardising your academic success due to strict deadlines. Just place your order with our service and let professionals help you achieve your academic success!</p>
