--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1925,6 +1925,9 @@ label a{
 .price-list .tag-bg .price-numb{
 	font-size: 28px;
 }
+.tag-bg .price-numb span{
+	font-size: 20px;
+}
 
 .price-list + .btn-transparent{
 	margin: 18px auto 0;
@@ -2453,7 +2456,7 @@ ul.red-bullets li + li{
 	}
 
 	.pricing-page .tariff-description{
-		padding: 9px 13px 5px;
+		padding: 9px 0px 5px 13px;
 		font-size: 13px;
 	}
 	.pricing-page .tariff-period{
