--- a/templates/pages/coursework-writing.html
+++ b/templates/pages/coursework-writing.html
@@ -28,7 +28,7 @@
 			<img src="{{ STATIC_URL }}images/demo/banner-large.jpg" alt="">
 			<div class="banner-title">Buy Coursework</div>
 			<a href="{% url 'new-order' %}" class="btn btn-primary">Order Now</a>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.99</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.<span>99</span></span></span>/page</div>
 		</div>
 
 		
