--- a/templates/pages/custom-essays.html
+++ b/templates/pages/custom-essays.html
@@ -28,7 +28,7 @@
 		<img src="{{ STATIC_URL }}images/demo/banner-large.jpg" alt="">
 		<div class="banner-title">Buy Custom Essay</div>
 		<a href="{% url 'new-order' %}" class="btn btn-primary">Order Now</a>
-		<div class="tag-bg"><span class="currency">$<span class="price-numb">12.99</span></span>/page</div>
+		<div class="tag-bg"><span class="currency">$<span class="price-numb">12.<span>99</span></span></span>/page</div>
 	</div>
 	
 	<p>You will get high quality original paper that will meet your requirements and your  professor’s expectations. The content will be original, sound and up to date. We guarantee that your paper will not contain plagiarism of any form and will be delivered to you within the stated deadline. All this you can get for an affordable price from our writers. Simply place your order online at our website. Give your specific requirements and your paper will be sent to you. It can be revised free of charge until you are satisfied. Then you make your payment and receive your paper. No more worries and no more stress! We are always a click away, 24/7, ready to assist you.</p>
