--- a/templates/pages/term-papers.html
+++ b/templates/pages/term-papers.html
@@ -30,7 +30,7 @@
 			<img src="{{ STATIC_URL }}images/demo/banner-large.jpg" alt="">
 			<div class="banner-title">Buy Term Paper</div>
 			<a href="{% url 'new-order' %}" class="btn btn-primary">Order Now</a>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.99</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.<span>99</span></span></span>/page</div>
 		</div>
 		
 		<p>So, right now all you need to do is to fill out our order form, proceed to trusted payment service and wait till one of our experts handle your order. Do not worry about providing us with details as we will not disclose your identity to anyone and no one will ever find out about you using some help on our website. So don’t waste your time any more and enjoy us helping you get your much deserved academic success!</p>
