Fixed uploads and messages

--- a/templates/orders/msgs_tab.html
+++ b/templates/orders/msgs_tab.html
@@ -46,7 +46,7 @@
       <div class="col-md-12 col-sm-12">
        <label class="col-md-2 col-sm-2 col-xs-12 control-label">Send to:</label>
        <div class="col-md-4 col-sm-4 col-xs-12">
-        <select name="visibility" class="form-control">
+        <select name="visibility" class="form-control" required>
          <option value="0" disabled selected="selected">Please select</option>
          <option value="{{co.MSGS_WRITER}}" >Writer</option>
          <option value="{{co.MSGS_ADM}}" >Admin&Editor</option>
@@ -57,13 +57,13 @@
 
      <div class="form-group">
       <div class="col-md-12 col-sm-12">
-       <input type="text" name="title" class="form-control" placeholder="Subject">
+       <input type="text" name="title" class="form-control" placeholder="Subject" required>
       </div>
      </div>
 
      <div class="form-group">
       <div class="col-md-12 col-sm-12">
-      <textarea name="body" class="form-control" placeholder="Type a message here..." rows="3"></textarea>
+      <textarea name="body" class="form-control" placeholder="Type a message here..." rows="3" required></textarea>
       </div>
      </div>
    
