--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -265,28 +265,25 @@
      <h4 class="modal-title" id="myModalLabel">Upload file</h4>
     </div>
     <div class="modal-body">
-     <form class="form-horizontal">
+     <form action="{% url 'order-upload' order.pk %}" class="form-horizontal" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
       <div class="form-group">
-       <label class="col-sm-4 control-label">File input</label>
+       <label class="col-sm-3 control-label">File input</label>
        <div class="col-sm-8">
-        <input type="file" class="form-control">
-       </div>
-      </div>
-      <div class="form-group">
-       <label class="col-sm-4 control-label">Comment</label>
-       <div class="col-sm-8">
-        <textarea class="form-control" rows="3"></textarea>
+        <input type="file" name="attach" class="form-control" accept=".txt,.doc,.docx,.xls,.xlsx,.pdf,.rtf,.odt,.jpg,.png" required>
+        <input type="hidden" name="access_level" value="1">
        </div>
       </div>
       <div class="submit-group">
-       <button type="button" class="btn btn-primary">Upload</button>
+       <button type="submit" class="btn btn-primary">Upload</button>
       </div>
      </form>
     </div>
+
    </div>
   </div>
  </div>
- <!-- end Delete modal-->
+ <!-- end Upload File modal-->
  <!-- END MODALS -->
 </div>
 <!-- END MIDDLE LAYOUT -->
