Fixed minor isses

--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -68,7 +68,7 @@
    <section class="quote">
     <div class="container">
      <div class="row">
-      <div class="col-md-9"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span></div>
+      <div class="col-md-9"><span>Place your first order and get 5% discount!</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
@@ -121,7 +121,7 @@
    <section class="quote">
     <div class="container">
      <div class="row">
-      <div class="col-md-9"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span></div>
+      <div class="col-md-9"><span>Place your first order and get 5% discount!</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
@@ -338,7 +338,7 @@
    <section class="quote">
     <div class="container">
      <div class="row ">
-      <div class="col-md-9"><span>Why wait?</span></div>
+      <div class="col-md-9"><span>Place your first order and get 5% discount!</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
@@ -381,7 +381,7 @@
    <section class="quote">
     <div class="container">
      <div class="row">
-      <div class="col-md-9"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span></div>
+      <div class="col-md-9"><span>Place your first order and get 5% discount!</span></div>
       <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div> 
     </div>
