--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load render_status %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
@@ -158,7 +159,13 @@
     {% if perm.can_edit %}
       <a href="{% url 'order-id-edit' order.pk %}" class="btn btn-default">Edit</a>
     {% endif %}
-    <a href="{% url 'order-id-buy' order.pk %}" class="btn btn-primary">Pay now ({{order.get_price}}$)</a>
+    {% if not payments|is_bought:order.pk %}
+     <form action="{% url 'order-id-buy' order.pk %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="status" value="{{co.UNPROCESSED}}">
+        <button class="btn btn-primary" >Buy ({{order.get_price}}$)</button>
+     </form>
+    {% endif %}
    </div>
    
   </div><!-- End Details Tab -->
