--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load render_status %}
 
 {% block breadcrump %}
 <div class="breadcrumbs">
@@ -186,6 +187,13 @@
      <div class="row text-center order-actions">
        <a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
        <button type="submit" class="btn btn-primary">Save changes</button>
+       {% if not payments|is_bought:order.pk %}
+         <form action="{% url 'order-id-buy' order.pk %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="status" value="{{co.UNPROCESSED}}">
+          <button class="btn btn-primary" >Buy ({{order.get_price}}$)</button>
+         </form>
+       {% endif %}
      </div>
    </form>
   </div><!-- End Details Tab -->
